# deb-python-linecache2

./: .gitignore  .gitreview  .testr.conf  README.rst  setup.cfg  setup.py  test-requirements.txt  update.sh
debian/: changelog  control  copyright  rules  watch
debian/patches/: series
linecache2/: __init__.py
linecache2/tests/: test_linecache.py
